--- a/app/.pipeline/templates/app.bc.yaml
+++ b/app/.pipeline/templates/app.bc.yaml
@@ -38,27 +38,27 @@ parameters:
     required: true
     value: 16-ubi8
 objects:
-  - kind: ImageStream
-    apiVersion: v1
-    metadata:
-      name: ${SOURCE_IMAGE_NAME}
-      creationTimestamp: null
-      annotations:
-        description: Nodejs Base Image
-      labels:
-        shared: 'true'
-    spec:
-      lookupPolicy:
-        local: false
-      tags:
-        - name: ${SOURCE_IMAGE_TAG}
-          annotations: null
-          from:
-            kind: DockerImage
-            name: ${BASE_IMAGE_URL}
-          importPolicy: {}
-          referencePolicy:
-            type: Local
+  # - kind: ImageStream
+  #   apiVersion: v1
+  #   metadata:
+  #     name: ${SOURCE_IMAGE_NAME}
+  #     creationTimestamp: null
+  #     annotations:
+  #       description: Nodejs Base Image
+  #     labels:
+  #       shared: 'true'
+  #   spec:
+  #     lookupPolicy:
+  #       local: false
+  #     tags:
+  #       - name: ${SOURCE_IMAGE_TAG}
+  #         annotations: null
+  #         from:
+  #           kind: DockerImage
+  #           name: ${BASE_IMAGE_URL}
+  #         importPolicy: {}
+  #         referencePolicy:
+  #           type: Local
   - kind: ImageStream
     apiVersion: v1
     metadata:
@@ -101,10 +101,10 @@ objects:
           ref: '${SOURCE_REPOSITORY_REF}'
         type: Git
       strategy:
-        dockerStrategy:
-          from:
-            kind: ImageStreamTag
-            name: ${SOURCE_IMAGE_NAME}:${SOURCE_IMAGE_TAG}
+        # dockerStrategy:
+        #   from:
+        #     kind: ImageStreamTag
+        #     name: ${SOURCE_IMAGE_NAME}:${SOURCE_IMAGE_TAG}
         type: Docker
       successfulBuildsHistoryLimit: 5
       triggers:
