--- a/api/.pipeline/templates/api.dc.yaml
+++ b/api/.pipeline/templates/api.dc.yaml
@@ -66,12 +66,18 @@ parameters:
   - name: KEYCLOAK_CLIENT_ID
     description: Client Id for application
     required: true
+  - name: KEYCLOAK_ADMIN_HOST
+    description: Keycloak admin host
+    required: true
   - name: KEYCLOAK_ADMIN_USERNAME
     description: keycloak host admin username
+    required: true
   - name: KEYCLOAK_SECRET
     description: The name of the keycloak secret
+    required: true
   - name: KEYCLOAK_SECRET_ADMIN_PASSWORD
     description: The key of the admin password in the keycloak secret
+    required: true
   - name: API_PORT_DEFAULT
     value: '6100'
   - name: API_PORT_DEFAULT_NAME
