--- a/.config/config.json
+++ b/.config/config.json
@@ -51,7 +51,9 @@
       "integrationId": "4430",
       "adminHost": "https://loginproxy.gov.bc.ca/auth",
       "adminUserName": "biohub-svc-4466",
-      "apiHost": "https://api.loginproxy.gov.bc.ca/api/v1"
+      "apiHost": "https://api.loginproxy.gov.bc.ca/api/v1",
+      "keycloakSecret": "keycloak-admin-password",
+      "keycloakSecretAdminPassword": "'keycloak_admin_password"
     },
     "test": {
       "url": "https://test.loginproxy.gov.bc.ca/auth",
@@ -60,7 +62,9 @@
       "integrationId": "4430",
       "adminHost": "https://loginproxy.gov.bc.ca/auth",
       "adminUserName": "biohub-svc-4466",
-      "apiHost": "https://api.loginproxy.gov.bc.ca/api/v1"
+      "apiHost": "https://api.loginproxy.gov.bc.ca/api/v1",
+      "keycloakSecret": "keycloak-admin-password",
+      "keycloakSecretAdminPassword": "'keycloak_admin_password"
     },
     "prod": {
       "url": "https://loginproxy.gov.bc.ca/auth",
@@ -69,7 +73,9 @@
       "integrationId": "4430",
       "adminHost": "https://loginproxy.gov.bc.ca/auth",
       "adminUserName": "biohub-svc-4466",
-      "apiHost": "https://api.loginproxy.gov.bc.ca/api/v1"
+      "apiHost": "https://api.loginproxy.gov.bc.ca/api/v1",
+      "keycloakSecret": "keycloak-admin-password",
+      "keycloakSecretAdminPassword": "'keycloak_admin_password"
     }
   }
 }
