BHBC-2069: Migrate Keycloak to Standard Realm (#152)
 * BHBC-2069: Migrate Keycloak to Standard Realm
 * Added User GUID as a required field when filling out the Add System User form.
 * API endpoints now distinguish users by GUID rather than user identifier
 * Added new Keycloak utils for parsing Keycloak tokens and determining GUIDs, identifiers
 * New User Service method to maintain system user records
 * Added user_guid to the system users table.
 * Removed IDIR test users from the users table seeder; Added user GUIDs to active developer IDIR accounts.
 * Distinguished BCeID basic and business identity sources

--- a/.config/config.json
+++ b/.config/config.json
@@ -45,19 +45,37 @@
   },
   "sso": {
     "dev": {
-      "url": "https://dev.oidc.gov.bc.ca/auth",
-      "clientId": "biohub-platform",
-      "realm": "35r1iman"
+      "url": "https://dev.loginproxy.gov.bc.ca/auth",
+      "clientId": "bio-hub-browser-4230",
+      "realm": "standard",
+      "integrationId": "4430",
+      "adminHost": "https://loginproxy.gov.bc.ca/auth",
+      "adminUserName": "biohub-svc-4466",
+      "apiHost": "https://api.loginproxy.gov.bc.ca/api/v1",
+      "keycloakSecret": "keycloak-admin-password",
+      "keycloakSecretAdminPassword": "keycloak_admin_password"
     },
     "test": {
-      "url": "https://test.oidc.gov.bc.ca/auth",
-      "clientId": "biohub-platform",
-      "realm": "35r1iman"
+      "url": "https://test.loginproxy.gov.bc.ca/auth",
+      "clientId": "bio-hub-browser-4230",
+      "realm": "standard",
+      "integrationId": "4430",
+      "adminHost": "https://loginproxy.gov.bc.ca/auth",
+      "adminUserName": "biohub-svc-4466",
+      "apiHost": "https://api.loginproxy.gov.bc.ca/api/v1",
+      "keycloakSecret": "keycloak-admin-password",
+      "keycloakSecretAdminPassword": "keycloak_admin_password"
     },
     "prod": {
-      "url": "https://oidc.gov.bc.ca/auth",
-      "clientId": "biohub-platform",
-      "realm": "35r1iman"
+      "url": "https://loginproxy.gov.bc.ca/auth",
+      "clientId": "bio-hub-browser-4230",
+      "realm": "standard",
+      "integrationId": "4430",
+      "adminHost": "https://loginproxy.gov.bc.ca/auth",
+      "adminUserName": "biohub-svc-4466",
+      "apiHost": "https://api.loginproxy.gov.bc.ca/api/v1",
+      "keycloakSecret": "keycloak-admin-password",
+      "keycloakSecretAdminPassword": "keycloak_admin_password"
     }
   }
 }
