--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -17,9 +17,8 @@ WORKDIR $HOME
 # Copy the package files only
 COPY ./package*.json ./
 
+# Install packages with legacy-peer-deps enabled. See good explanation of why here: https://stackoverflow.com/a/66620869/3461093
 RUN npm install --legacy-peer-deps
-
-# ENV PATH /opt/rh/rh-nodejs8/root/usr/bin:${HOME}/node_modules/.bin/:${HOME}/app.npm-global/bin/:${HOME}/bin:${HOME}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
 # Copy the rest of the files
 COPY . .
