BHBC-2168: job queue scheduler v1

--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,8 @@
     "clean": "gulp clean",
     "build": "gulp build",
     "start-reload": "./node_modules/.bin/nodemon src/app.ts --exec ts-node",
+    "queue": "ts-node src/queue",
+    "queue-reload": "./node_modules/.bin/nodemon src/queue.ts --exec ts-node",
     "migrate-latest": "knex migrate-latest",
     "migrate-rollback": "knex migrate-rollback",
     "test": "mocha",
@@ -38,6 +40,7 @@
     "db-migrate-pg": "~1.2.2",
     "express": "~4.17.1",
     "express-openapi": "~9.3.0",
+    "fastq": "^1.15.0",
     "fast-xml-parser": "^4.0.8",
     "jsonpath": "~1.1.1",
     "jsonwebtoken": "~8.5.1",
@@ -49,11 +52,13 @@
     "multer": "~1.4.3",
     "openapi-request-validator": "~11.0.0",
     "openapi-response-validator": "~11.0.0",
+    "p-queue": "^7.3.3",
     "pg": "~8.7.1",
     "qs": "~6.10.1",
+    "rxjs": "~7.8.0",
     "sql-template-strings": "~2.2.2",
     "swagger-ui-express": "~4.3.0",
-    "typescript": "~4.1.6",
+    "typescript": "~4.2.4",
     "uuid": "~8.3.2",
     "winston": "~3.3.3",
     "xlsx": "~0.17.0"
