BHBC-2168: Add Pipeline files for queue process.

--- a/api/Dockerfile.queue
+++ b/api/Dockerfile.queue
@@ -30,7 +30,7 @@ COPY . ./
 # Application VOLUME
 VOLUME ${HOME}
 
-EXPOSE 6100
+EXPOSE 6500
 
 # Application Entry point
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "queue"]
