--- a/platform/networking/networkpolicies/app-to-api-to-db.yaml
+++ b/platform/networking/networkpolicies/app-to-api-to-db.yaml
@@ -4,12 +4,18 @@ labels:
   template: app-to-api-to-db
 metadata:
   name: app-to-api-to-db
+  annotations:
+    description: >-
+      This Template creates various network policy items. Each one enables communication between two OpenShift resources.
+      For example: `api-to-db` allows the api pods to communicate with the database pods. The pods are identified based 
+      on a selector, in this case the `role` field.
 parameters:
   - description: The OpenShift Namespace license plate
     displayName: Namespace
     name: NAMESPACE
     value: "a0ec71"
 objects:
+  ## Dev
   - apiVersion: networking.k8s.io/v1
     kind: NetworkPolicy
     metadata:
@@ -32,6 +38,25 @@ objects:
   - apiVersion: networking.k8s.io/v1
     kind: NetworkPolicy
     metadata:
+      name: queue-to-db
+      namespace: "${NAMESPACE}-dev"
+    spec:
+      ingress:
+        - from:
+            - podSelector:
+                matchLabels:
+                  role: queue
+          ports:
+            - port: 5432
+              protocol: TCP
+      podSelector:
+        matchLabels:
+          role: db
+      policyTypes:
+        - Ingress
+  - apiVersion: networking.k8s.io/v1
+    kind: NetworkPolicy
+    metadata:
       name: app-to-api
       namespace: "${NAMESPACE}-dev"
     spec:
@@ -48,6 +73,8 @@ objects:
           role: api
       policyTypes:
         - Ingress
+
+  ## Test
   - apiVersion: networking.k8s.io/v1
     kind: NetworkPolicy
     metadata:
@@ -59,6 +86,25 @@ objects:
             - podSelector:
                 matchLabels:
                   role: api
+          ports:
+            - port: 5432
+              protocol: TCP
+      podSelector:
+        matchLabels:
+          role: db
+      policyTypes:
+        - Ingress
+  - apiVersion: networking.k8s.io/v1
+    kind: NetworkPolicy
+    metadata:
+      name: queue-to-db
+      namespace: "${NAMESPACE}-dev"
+    spec:
+      ingress:
+        - from:
+            - podSelector:
+                matchLabels:
+                  role: queue
           ports:
             - port: 5432
               protocol: TCP
@@ -86,6 +132,7 @@ objects:
           role: api
       policyTypes:
         - Ingress
+  ## Prod
   - apiVersion: networking.k8s.io/v1
     kind: NetworkPolicy
     metadata:
@@ -97,6 +144,25 @@ objects:
             - podSelector:
                 matchLabels:
                   role: api
+          ports:
+            - port: 5432
+              protocol: TCP
+      podSelector:
+        matchLabels:
+          role: db
+      policyTypes:
+        - Ingress
+  - apiVersion: networking.k8s.io/v1
+    kind: NetworkPolicy
+    metadata:
+      name: queue-to-db
+      namespace: "${NAMESPACE}-dev"
+    spec:
+      ingress:
+        - from:
+            - podSelector:
+                matchLabels:
+                  role: queue
           ports:
             - port: 5432
               protocol: TCP
@@ -124,6 +190,7 @@ objects:
           role: api
       policyTypes:
         - Ingress
+  ## Setup
   - apiVersion: networking.k8s.io/v1
     kind: NetworkPolicy
     metadata:
@@ -143,6 +210,7 @@ objects:
                   role: setup
       policyTypes:
         - Ingress
+
   - apiVersion: networking.k8s.io/v1
     kind: NetworkPolicy
     metadata:
